<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q1"
        android:layout_marginBottom="16dp" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choix1"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choix2"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choix3"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choix4"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q2"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oui"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/non"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/quitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#008000"
            android:text="@string/quitter"
            android:textColor="#E8F5E9"
            android:layout_marginLeft="0dp"/>

        <Button
            android:id="@+id/suivant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suivant"
            android:background="#008000"
            android:textColor="#E8F5E9"
            android:layout_marginStart="16dp" />
    </LinearLayout>
</LinearLayout>
